11没写，其余完事，14年龄有些问题还有7问不是在线人数而是登陆人数

--- a/finalexamExample/WebApplication1/WebApplication1.csproj
+++ b/finalexamExample/WebApplication1/WebApplication1.csproj
@@ -76,6 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Num10.aspx" />
+    <Content Include="Num11.aspx" />
+    <Content Include="Num12.aspx" />
+    <Content Include="Num14.aspx" />
     <Content Include="Num5.aspx" />
     <Content Include="Num6.aspx" />
     <Content Include="Num7.aspx" />
@@ -90,6 +93,27 @@
     </Compile>
     <Compile Include="Num10.aspx.designer.cs">
       <DependentUpon>Num10.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Num11.aspx.cs">
+      <DependentUpon>Num11.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Num11.aspx.designer.cs">
+      <DependentUpon>Num11.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Num12.aspx.cs">
+      <DependentUpon>Num12.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Num12.aspx.designer.cs">
+      <DependentUpon>Num12.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Num14.aspx.cs">
+      <DependentUpon>Num14.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Num14.aspx.designer.cs">
+      <DependentUpon>Num14.aspx</DependentUpon>
     </Compile>
     <Compile Include="Num5.aspx.cs">
       <DependentUpon>Num5.aspx</DependentUpon>
